[tool.poetry]
name = "antispambot"
version = "0.1.0"
description = ""
authors = ["AlexBelyan <belyan.alex93@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
