[tool.poetry]
name = "antispambot"
version = "0.4.2"
description = ""
authors = ["AlexBelyan <belyan.alex93@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^3.3.0"
aiosqlite = "^0.19.0"
apscheduler = "^3.10.4"

[tool.poetry.group.dev.dependencies]
nuitka = "^2.0.1"

[build-system]
requires = ["poetry-core", 'wheel', 'nuitka', ]
build-backend = "nuitka.distutils.Build"

[tool.nuitka]
onefile = true
output-dir = 'build'
show-scons = true
standalone = true